--- a/src/ArcGISPortalViewer.Popup/ArcGISPortalViewer.Popup.csproj
+++ b/src/ArcGISPortalViewer.Popup/ArcGISPortalViewer.Popup.csproj
@@ -123,8 +123,8 @@
     <Compile Include="Utilities\AttributeBindingHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="Esri.ArcGISRuntime, Version=10.2.3">
-      <Name>ArcGIS Runtime for Windows Store apps %28Beta 2%29</Name>
+    <SDKReference Include="Esri.ArcGISRuntime, Version=10.2.4">
+      <Name>ArcGIS Runtime for Windows Store apps</Name>
     </SDKReference>
     <SDKReference Include="Microsoft.VCLibs, version=12.0">
       <Name>Microsoft Visual C++ 2013 Runtime Package for Windows</Name>
