--- a/src/ArcGISPortalViewer/ArcGISPortalViewer.csproj
+++ b/src/ArcGISPortalViewer/ArcGISPortalViewer.csproj
@@ -339,7 +339,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\arcgis-toolkit-dotnet\src\WinStore\Esri.ArcGISRuntime.Toolkit\Esri.ArcGISRuntime.Toolkit.csproj">
+    <ProjectReference Include="..\..\arcgis-toolkit-dotnet\src\WinStore\Esri.ArcGISRuntime.Toolkit\Esri.ArcGISRuntime.Toolkit.WindowsStore.csproj">
       <Project>{ae395530-9918-45b5-8f81-199136bdb367}</Project>
       <Name>Esri.ArcGISRuntime.Toolkit</Name>
     </ProjectReference>
