--- a/src/ArcGISPortalViewer/ArcGISPortalViewer.csproj
+++ b/src/ArcGISPortalViewer/ArcGISPortalViewer.csproj
@@ -339,9 +339,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\arcgis-toolkit-dotnet\src\WinStore\Esri.ArcGISRuntime.Toolkit\Esri.ArcGISRuntime.Toolkit.csproj">
-      <Project>{ae395530-9918-45b5-8f81-199136bdb367}</Project>
-      <Name>Esri.ArcGISRuntime.Toolkit</Name>
+    <ProjectReference Include="..\..\arcgis-toolkit-dotnet\src\WinStore\Esri.ArcGISRuntime.Toolkit\Esri.ArcGISRuntime.Toolkit.WindowsStore.csproj">
+      <Project>{2d6828a8-83d2-4dc5-8212-595560086ce7}</Project>
+      <Name>Esri.ArcGISRuntime.Toolkit.WindowsStore</Name>
     </ProjectReference>
     <ProjectReference Include="..\ArcGISPortalViewer.Popup\ArcGISPortalViewer.Popup.csproj">
       <Project>{e7108835-af55-4062-81bd-3ade4116266f}</Project>
